Added command handler

--- a/config.json
+++ b/config.json
@@ -1,3 +1,5 @@
 {
-    "token": "NjEyMjE4MzEyMTAwNjc1NTg1.XWegnw.0Ot1-xp9077Qp2SzBhBduksc4SY"
+
+    "token": "NjEyMjE4MzEyMTAwNjc1NTg1.XbYncQ.C3YCAHzOLDNsJHf1V9QOofS4VgE",
+    "prefix": "!"
 }
