--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Tiago Redaelli",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.5.1"
+    "discord.js": "^11.5.1",
+    "djs-commands": "^1.2.2"
   }
 }
