post-replay-example works

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "djs-commands": "^1.2.2"
+    "djs-commands": "^1.2.2",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
